--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<demo.dir>${project.basedir}/src/demo</demo.dir>
 
 		<jpos.version>1.8.6</jpos.version>
+		<commons-pool.version>1.6</commons-pool.version>
 	</properties>
 
 	<repositories>
@@ -38,6 +39,13 @@
 			<artifactId>jpos</artifactId>
 			<version>${jpos.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>${commons-pool.version}</version>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
